ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
    name: ingress-svc
spec:
  rules:
  - host: example.com
    http:
      paths:
        - path: /cart
          pathType: Prefix
          backend:
            service:
             name: nodeport
             port:
              number: 80
